<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_black_48dp"
        android:orderInCategory="1"
        android:title="@string/home" />
    <item
        android:id="@+id/discussionBoardFragment"
        android:icon="@drawable/ic_comment_text_multiple_black_48dp"
        android:orderInCategory="2"
        android:title="@string/discuss_area" />
    <item
        android:id="@+id/publishFragment"
        android:icon="@drawable/ic_plus_black_48dp"
        android:orderInCategory="3"
        android:title="@string/publish" />
    <item
        android:id="@+id/chatRoomFragment"
        android:icon="@drawable/ic_message_black_48dp"
        android:orderInCategory="4"
        android:title="@string/message" />
    <item
        android:id="@+id/memberCenterFragment"
        android:icon="@drawable/ic_account_black_48dp"
        android:orderInCategory="5"
        android:title="@string/member_center" />
</menu>